# nodeskclaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  dev.sh  docker-compose.yml  features.yaml
.cursor/rules/: auto-plan-review.mdc  coding-style.mdc  docs-first-workflow.mdc  git-conventions.mdc
.github/workflows/: check-runtime-updates.yml  quality-gate.yml
claw-buddy-backend/: .dockerignore  README.md  pyproject.toml
claw-buddy-backend/app/: main.py
claw-buddy-frontend/: nginx.conf
claw-buddy-frontend/src/: App.vue
claw-buddy-llm-proxy/: .env.example  build-and-push.sh  pyproject.toml
claw-buddy-llm-proxy/app/: main.py
claw-buddy-llm-proxy/deploy/: clash-config.yaml  secret.yaml.example  service.yaml
claw-buddy-portal/: nginx.conf  package-lock.json  package.json
claw-buddy-portal/src/: App.vue
deploy/: README.md  cli.sh  deploy.sh  init-secrets.sh
deploy/k8s/: admin.yaml  backend.yaml  portal.yaml
docs/: 后端架构设计.md
nodeskclaw-artifacts/: README.md
nodeskclaw-backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
nodeskclaw-frontend/: README.md  nginx.conf  package-lock.json  package.json
nodeskclaw-llm-proxy/: .env.example  README.md  build-and-push.sh  deploy.sh  pyproject.toml
nodeskclaw-portal/: nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
openclaw-channel-clawbuddy/: package.json
openclaw-channel-learning/: README.md  index.ts  package.json
openclaw-channel-nodeskclaw/: README.md  index.ts  openclaw.plugin.json  package.json
(+298 files in other folders)
