[project]
name = "claw-buddy-llm-proxy"
version = "0.1.0"
description = "ClawBuddy LLM Proxy - 独立 LLM 请求代理服务"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.7.0",
]
